# firefox_extension

./: .gitignore  README.md  content-script.js  index.html  main.js  manifest.json
uno/: README.md  content-script.js  manifest.json  popup.html  popup.js  rust_wasm_module.js  rust_wasm_module_bg.wasm
uno/rust_wasm_module/: Cargo.toml
uno/rust_wasm_module/src/: lib.rs
uno/rust_wasm_module/wasm_output/: rust_wasm_module_bg.wasm
wasm_link_color/: Cargo.toml
wasm_link_color/src/: lib.rs
