[package]
name = "wasm_link_color"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
# web-sys = {version = "0.3.62", features = ["Document"]}
web-sys = { version = "0.3", features = ['Document', 'NodeList', 'HtmlElement', 'Window', 'CssStyleDeclaration'] }

[lib]
crate-type = ["cdylib"]
