[package]
name = "rust_wasm_module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# `crate-type = ["cdylib"]` builds the library as a C-compatible
# dynamic library, exporting only the necessary functions and removing
# Rust-specific metadata. It results in smaller and more compact wasm
# output files, which is more appropriate for WebAssembly
# applications.
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ['Document', 'Element', 'HtmlElement'] }
js-sys = "0.3"

